# poke-api-etl

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/raw/: pokemon_file.json
data/transient/: pokemon_file_1.json  pokemon_file_10.json  pokemon_file_11.json  pokemon_file_12.json  pokemon_file_13.json  pokemon_file_14.json  pokemon_file_15.json  pokemon_file_16.json  pokemon_file_17.json  pokemon_file_18.json  pokemon_file_19.json  pokemon_file_2.json  pokemon_file_20.json  pokemon_file_21.json  pokemon_file_22.json  pokemon_file_23.json  pokemon_file_24.json  pokemon_file_25.json  pokemon_file_26.json  pokemon_file_27.json  pokemon_file_28.json  pokemon_file_29.json  pokemon_file_3.json  pokemon_file_30.json  pokemon_file_31.json  pokemon_file_32.json  pokemon_file_33.json  pokemon_file_34.json  pokemon_file_35.json  pokemon_file_36.json  pokemon_file_37.json  pokemon_file_38.json  pokemon_file_39.json  pokemon_file_4.json  pokemon_file_40.json  pokemon_file_41.json  pokemon_file_42.json  pokemon_file_43.json  pokemon_file_44.json  pokemon_file_45.json  (+26 more)
data/trusted/: pokemon_file.csv
tests/: test_api.py
